WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
267939
Prevent loading extensions on iOS that don't use non-persistent background pages
https://bugs.webkit.org/show_bug.cgi?id=267939
Summary
Prevent loading extensions on iOS that don't use non-persistent background pages
Timothy Hatcher
Reported
2024-01-23 11:57:26 PST
We log an error currently, but you can still load the extension in a WebExtensionController.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-01-23 11:57:37 PST
<
rdar://problem/121460660
>
Carlos J.
Comment 2
2024-05-23 23:30:16 PDT
Why does it have to be impossible to load extensions with persistent background pages? Can't Safari on iOS just treat it as non-persistent and let the developer take the responsibility, based on the error, to make sure the code works well in both persistent and non-persistent environments.
Brian Weinstein
Comment 3
2024-07-24 10:19:20 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/31170
EWS
Comment 4
2024-07-24 13:33:58 PDT
Committed
281313@main
(523d833347fe): <
https://commits.webkit.org/281313@main
> Reviewed commits have been landed. Closing PR #31170 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug