Prevent loading extensions on iOS that don't use non-persistent background pages https://bugs.webkit.org/show_bug.cgi?id=267939 rdar://121460660

Reviewed by Timothy Hatcher.

* Source/WebKit/UIProcess/Extensions/Cocoa/WebExtensionContextCocoa.mm:
(WebKit::WebExtensionContext::load): Return early from load if we are attempting to load a persistent background
page on a platform that doesn't support it.
* Tools/TestWebKitAPI/Tests/WebKitCocoa/WKWebExtensionController.mm:
(TestWebKitAPI::TEST(WKWebExtensionController, LoadingAndUnloadingContexts)): Add test verifying that a persistent
background page doesn't get loaded on iPhone.

Canonical link: https://commits.webkit.org/281313@main